--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.45.7",
     "axios": "^1.7.2",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.1",
