--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.45.7",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
