--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.45.7",
+    "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
