add leaflet type declaration dev dependency
Co-authored-by: Nelson Janusson <hejnelson@gmail.com>
Co-authored-by: Adam Hedin <adam.s.hedin@gmail.com>
Co-authored-by: Supipi Algama <nirmanialgama@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify/react": "^5.0.1",
     "@tanstack/eslint-plugin-query": "^5.51.12",
     "@tanstack/router-vite-plugin": "^1.45.7",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
