--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.5",
+    "@mui/x-charts": "^7.11.1",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-router": "^1.45.7",
